--- a/scss/inline-node.scss
+++ b/scss/inline-node.scss
@@ -39,7 +39,7 @@ article.node-character.node-teaser {
 .group-left,
 .group-right {
   .paragraphs-items {
-    margin: 0;
+    margin: 0 0 1em 0;
     padding: 0;
   }
 }
